<resources>
    <string name="app_name">SoireeGaming</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mesages_hint">MESAGES</string>
    <string name="envoyer">Envoyer</string>
    <string name="create_new_event">Création d\'un nouvelle évenement !</string>
    <string name="create_event_desc_text">Crée une soirée (ou journée, week-end) gaming, avec vos amis (privée), ou rencontrez de nouveaux joueurs !</string>
    <string name="name_your_event">Nommez votre event, et décrivez le programme prévu :</string>
    <string name="event_name">Nom de l\'event</string>
    <string name="desc_program">Description du programme</string>
    <string name="locality">Lieu</string>
    <string name="city">Ville</string>
    <string name="date_and_hour">Date et Horaires</string>
    <string name="begin">Date de début :</string>
    <string name="choose_date_hint">choisir la date</string>
    <string name="from_hour">A partir de :</string>
    <string name="choose_hour">choisir l\'heure</string>
    <string name="end">Date de fin :</string>
    <string name="until_hour">Jusqu\'à :</string>
    <string name="type">Type</string>
    <string name="console_pc_cg">Console(s)/ PC :</string>
    <string name="search">Recherche</string>
    <string name="style_cg">Style de jeu :</string>
    <string name="param">Paramètres</string>
    <string name="option_advertisement">Les options suivantes permettent de créer des soirées personnalisées. Gardez tout de même en tête que plus on est de fou plus on rit !</string>
    <string name="private_party_text">Soirée privée (sur invitation)</string>
    <string name="open_to_gender">Soirée ouverte a(ux) :</string>
    <string name="eat_and_drink">Nourriture et boissons :</string>
    <string name="sleep_on">Dormir sur place :</string>
    <string name="name">Nom :</string>
    <string name="email">Email :</string>
    <string name="member_since">Membre depuis :</string>
    <string name="test_hotmail">test@hotmail.fr</string>
    <string name="test_date">date</string>
    <string name="test_name">nom</string>
    <string name="personnal_data">Informations Personnelles</string>
    <string name="gender">Genre:</string>
    <string name="show_ask">afficher?</string>
    <string name="age">Age :</string>
    <string name="delete_account">Supprimer mon compte :</string>
    <string name="delete_advertisement">Attention, toute suppression de compte est IRREVERSIBLE, vous perdrez tout vos historiques de soirées et messages.</string>
    <string name="delete">Supprimer</string>
    <string name="i_understand">J\'ai bien compris !</string>
    <string name="set_by">Organisé par:</string>
    <string name="example_text_user">user</string>
    <string name="create_event_title">Création d\'un nouvelle évenement !</string>
    <string name="create_event_desc_title">Crée une soirée (ou journée, week-end) gaming, avec vos amis (privée), ou rencontrez de nouveaux joueurs !</string>
    <string name="event_type">Type de soirée</string>
    <string name="detail_example">DETAIL</string>
    <string name="ask_to_join">Demander à rejoindre</string>
    <string name="app_name_accent">Soirée Gaming</string>
    <string name="title_sub">Organisez vos soirées jeux vidéo !</string>
    <string name="inscription">INSCRIPTION</string>
    <string name="already_login">Déja inscris? Je me connecte</string>
    <string name="gamer_speak">Avis des Gamers :</string>
    <string name="edit_profile">Modifier Profil</string>
    <string name="prenom_example_text">Prenom</string>
    <string name="age_edit_profile">Age (modifier profil)</string>
    <string name="gender_edit_profile">Genre (modifier profil)</string>
    <string name="r_putation">Réputation</string>
    <string name="loading_text">Chargement \n  en cours…</string>
    <string name="men_notif_text">Gérer Notifications</string>
    <string name="menu_about_text">A propos de Soirée Gaming</string>
    <string name="menu_logout_text">Déconnexion</string>
    <string name="change_notif">Gérer les notifications</string>
    <string name="profil">profil</string>
    <string name="home">Accueil</string>
    <string name="explorer">Explorer</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="location_text_perm">Pour améliorer ton experience Soirée Gaming, l\'application a besoin de ta permission pour la géo localisation.   Tu trouvera plus facilement les événements a proximité !</string>
    <string name="authorize_location">Autoriser la localisation</string>
    <string name="later">Plus tard</string>
    <string name="my_events">Mes Events</string>
    <string name="create_my_event">+ Créer un évenement</string>
    <string name="my_calendar">Mon Calendrier</string>
    <string name="tab_example">Monday</string>
    <string name="example_text">EXAMPLE TEXT</string>
    <string name="validate">Valider</string>
    <string name="location">Location</string>
    <string name="user">User</string>
    <string name="advanced_search">Recherche Avancée</string>
    <string name="date_to_max">Date ( Jusqu\'au ) :</string>
    <string name="eating">Repas :</string>
    <string name="sleeping">Dormir :</string>
    <string name="choose_crit">Choisis un critère</string>
    <string name="genre">Genre :</string>
    <string name="distance">Distance :</string>
    <string name="choose_date">Choisis la date</string>
    <string name="console">Console :</string>
    <string name="choose_console">Choisis une console</string>
    <string name="city_profile">Ville :</string>
    <string name="no_event_yet">Personne n\'à encore crée d\'events !!</string>
    <string name="not_presece">Tu n\'es dans aucun events pour l\'instant...</string>
    <string name="waiting_for_owner">En attente de l\'organisateur</string>
    <string name="remove_participation">Ne plus participer</string>
    <string name="awaiting_owner">En attente de l\'organisateur</string>
    <string name="participate_at">Participer</string>
    <string name="create_or_connect">Créer un compte / Se connecter</string>
    <string name="continue_to">Continuer</string>
    <string name="create_new_account">Créer un nouveau compte ?</string>
    <string name="not_yet_notifi">Pas encore de notifications !</string>
    <string name="no_one_create_event">Personne n\'à encore crée d\'events !!</string>
    <string name="send_message_to">Envoyer un message</string>
    <string name="no_rating_yet">Tu n\'as pas encore reçu d\'avis !</string>
    <string name="perms_necessary">Malheureusement, ces permissions sont nécessaires :(</string>
    <string name="permissions_needed">Hello! Soirée gaming a besoin de ta permission pour te localiser et ajouter des events a ton agenda!</string>

    <string-array name="gender">
        <item>Masculin</item>
        <item>Féminin</item>
        <item>Non Binaire</item>
    </string-array>

    <string-array name="gender_alt">
        <item>Tous !</item>
        <item>Hommes</item>
        <item>Femmes</item>
        <item>Non Binaires</item>
    </string-array>

    <string-array name="eat">
        <item>Pas de nourriture/bois.</item>
        <item>Inclus</item>
        <item>Chacun Apporte</item>
        <item>Pot Commun</item>
    </string-array>

    <string-array name="private_event">
        <item>Non</item>
        <item>Oui</item>
    </string-array>

    <string-array name="sleep">
        <item>Non</item>
        <item>Oui</item>
    </string-array>
    <string-array name="distance">
        <item>Toutes</item>
        <item>5 Km</item>
        <item>10 Km</item>
        <item>15 Km</item>
        <item>20 Km</item>
        <item>+25 Km</item>
    </string-array>
    <array name="age">
        <item>"18-25 ans"</item>
        <item>"26-30 ans"</item>
        <item>"31-35 ans"</item>
        <item>"36-40 ans"</item>
        <item>"40-45 ans"</item>
        <item>"46-50 ans"</item>
        <item>"51-55 ans"</item>
        <item>"26-60 ans"</item>
        <item>"+60 ans"</item>
    </array>
    <array name="console">
        <item>"Toutes"</item>
        <item>"PS4"</item>
        <item>"Xbox One"</item>
        <item>"PC"</item>
        <item>"Switch"</item>
        <item>"Wii U"</item>
        <item>"PS3"</item>
        <item>"Xbox 360"</item>
        <item>"3DS"</item>
        <item>"Xbox"</item>
        <item>"PS2"</item>
        <item>"Wii"</item>
        <item>"Gamecube"</item>
        <item>"Dreamcast"</item>
        <item>"Android"</item>
        <item>"Autre"</item>
    </array>
</resources>
