<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_ly_vert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/primaryColor"
        android:padding="1dp">

        <ImageView
            android:id="@+id/event_main_pic_vert"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/shape_white_round"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />



        <TextView
            android:id="@+id/event_main_title_vert_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:layout_toStartOf="@+id/event_main_date_vert_tv"
            android:text="@string/example_text"
            android:maxWidth="200dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/event_main_date_vert_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/event_main_pic_vert"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.045" />

        <TextView
            android:id="@+id/event_main_date_vert_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:text="@string/test_date"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/event_main_pic_vert"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.045" />
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_below="@id/event_main_title_vert_tv"
            android:layout_alignParentBottom="true"
            android:background="@color/lightGrey"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_main_pic_vert">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/event_main_desc_vert_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="0.65"
                    android:ellipsize="end"
                    android:maxLines="8"
                    android:text="@string/example_text" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:background="@color/primaryColor"
                    android:layout_weight="0.35"
                    >
                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                        android:background="@color/lightGrey"
                    android:gravity="center_horizontal"
                        android:layout_marginStart="2dp"
                    >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_green_round"
                            android:layout_margin="5dp">
                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_location"
                                android:tint="@color/primaryTextColor"/>

                            <TextView
                                android:id="@+id/event_main_loc_vert_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/location"
                                android:textColor="@color/primaryTextColor"/>
                        </LinearLayout>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:fillViewport="true">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/misc_event_item_vert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>
                </androidx.core.widget.NestedScrollView>
                </LinearLayout>
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/event_item_vert_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="heure"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.965"
            app:layout_constraintStart_toEndOf="@+id/event_main_pic_vert"
            app:layout_constraintTop_toBottomOf="@+id/event_main_date_vert_tv"
            app:layout_constraintVertical_bias="0.648" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>